--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -22,7 +22,7 @@
   video: oNvLKifFX20
   date: 2019-12-13 00:00:00
   type: Releases
-  duration: 4:13
+  duration: "4:13"
 
 - release: astral 
   artists: Bayza
@@ -35,7 +35,7 @@
   video: japf2Vj4Ohw
   date: 2019-12-11 00:00:00
   type: Releases
-  duration: 4:20
+  duration: "4:20"
 
 - release: mirage
   artists: Bayza
@@ -48,7 +48,7 @@
   video: PgVybJcDXTA
   date: 2019-10-25 00:00:00
   type: Releases
-  duration: 4:03
+  duration: "4:03"
 
 - release: genuine
   artists: Bayza
@@ -62,7 +62,7 @@
   date: 2019-9-02 00:00:13
   type: Releases
   album: Genuine
-  duration: 3:38
+  duration: "3:38"
 
 - release: delirio
   artists: Bayza
@@ -76,7 +76,7 @@
   date: 2019-9-02 00:00:12
   type: Releases
   album: Genuine
-  duration: 3:30
+  duration: "3:30"
 
 - release: romance
   artists: Bayza
@@ -90,7 +90,7 @@
   date: 2019-9-02 00:00:11
   type: Releases
   album: Genuine
-  duration: 3:52
+  duration: "3:52"
 
 - release: prisma
   artists: Bayza
@@ -104,7 +104,7 @@
   date: 2019-9-02 00:00:10
   type: Releases
   album: Genuine
-  duration: 3:21
+  duration: "3:21"
 
 - release: love
   artists: Bayza
@@ -118,7 +118,7 @@
   date: 2019-9-02 00:00:09
   type: Releases
   album: Genuine
-  duration: 2:57
+  duration: "2:57"
 
 - release: nada
   artists: Bayza
@@ -132,7 +132,7 @@
   date: 2019-9-02 00:00:08
   type: Releases
   album: Genuine
-  duration: 3:44
+  duration: "3:44"
   
 - release: fell
   artists: Bayza
@@ -146,7 +146,7 @@
   date: 2019-9-02 00:00:07
   type: Releases
   album: Genuine
-  duration: 4:05
+  duration: "4:05"
 
 - release: crescent
   artists: Bayza
@@ -160,7 +160,7 @@
   date: 2019-9-02 00:00:06
   type: Releases
   album: Genuine
-  duration: 3:42
+  duration: "3:42"
 
 - release: praise
   artists: Bayza
@@ -174,7 +174,7 @@
   date: 2019-9-02 00:00:05
   type: Releases
   album: Genuine
-  duration: 3:55
+  duration: "3:55"
 
 - release: dive
   artists: Dimatis & Bayza
@@ -188,7 +188,7 @@
   date: 2019-9-02 00:00:04
   type: Releases
   album: Genuine
-  duration: 3:47
+  duration: "3:47"
 
 - release: arousal
   artists: Bayza
@@ -202,7 +202,7 @@
   date: 2019-9-02 00:00:03
   type: Releases
   album: Genuine
-  duration: 3:53
+  duration: "3:53"
 
 - release: over-you
   artists: Bayza
@@ -216,7 +216,7 @@
   date: 2019-9-02 00:00:02
   type: Releases
   album: Genuine
-  duration: 3:53
+  duration: "3:53"
 
 - release: zephyr
   artists: Bayza
@@ -230,7 +230,7 @@
   date: 2019-9-02 00:00:02
   type: Releases
   album: Genuine
-  duration: 3:32
+  duration: "3:32"
 
 - release: majestic
   artists: Bayza
@@ -243,7 +243,7 @@
   video: Tfphg1sn1jQ
   date: 2019-8-02 00:00:00
   type: Releases
-  duration: 4:05
+  duration: "4:05"
 
 - release: oasis-remix
   artists: Lionis
@@ -256,7 +256,7 @@
   video: uDlypkh80z0
   date: 2019-4-19 00:00:00
   type: Releases
-  duration: 3:27
+  duration: "3:27"
 
 - release: remorse
   artists: Bayza
@@ -269,7 +269,7 @@
   video: w83ephnGcf0
   date: 2019-4-11 00:00:00
   type: Releases
-  duration: 4:26
+  duration: "4:26"
 
 - release: wisdom
   artists: Bayza
@@ -282,7 +282,7 @@
   video: lyZyYVHYYC4
   date: 2019-2-13 00:00:00
   type: Releases
-  duration: 4:09
+  duration: "4:09"
 
 - release: still-learning
   artists: Halsey
@@ -296,7 +296,7 @@
   date: 2020-2-04 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 3:55
+  duration: "3:55"
 
 - release: strawberry-shortcake
   artists: Melanie Martinez
@@ -310,7 +310,7 @@
   date: 2020-1-01 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 3:15
+  duration: "3:15"
 
 - release: everything-i-wanted
   artists: Billie Eilish
@@ -324,7 +324,7 @@
   date: 2019-11-30 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 5:05
+  duration: "5:05"
 
 - release: look-at-her-now
   artists: Selena Gomez
@@ -338,7 +338,7 @@
   date: 2019-10-25 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 3:21
+  duration: "3:21"
 
 - release: why-do-you-love-me
   artists: Charlotte Lawrence
@@ -352,7 +352,7 @@
   date: 2019-09-28 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 3:13
+  duration: "3:13"
 
 - release: senorita
   artists: Shawn Mendes, Camila Cabello
@@ -366,7 +366,7 @@
   date: 2019-08-03 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 4:32
+  duration: "4:32"
 
 - release: i-fell-in-love-with-the-devil
   artists: Avril Lavigne
@@ -380,7 +380,7 @@
   date: 2019-07-24 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 5:13
+  duration: "5:13"
 
 - release: no-pasa-nada
   artists: Ronna Riva
@@ -394,7 +394,7 @@
   date: 2019-07-16 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 3:43
+  duration: "3:43"
 
 - release: left-me-yet
   artists: Daya
@@ -408,7 +408,7 @@
   date: 2019-06-22 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 3:56
+  duration: "3:56"
 
 - release: mad-love
   artists: Mabel
@@ -422,7 +422,7 @@
   date: 2019-06-12 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 2:56
+  duration: "2:56"
 
 - release: not-the-end
   artists: Bayza
@@ -435,7 +435,7 @@
   video: 8t4YBIYjIJQ
   date: 2018-12-21 00:00:00
   type: Releases
-  duration: 4:24
+  duration: "4:24"
 
 - release: tavern
   artists: Bayza
@@ -448,7 +448,7 @@
   video: XM8pl7a9qjc
   date: 2018-11-30 00:00:00
   type: Releases
-  duration: 4:41
+  duration: "4:41"
 
 - release: delight
   artists: Bayza
@@ -461,7 +461,7 @@
   video: vPfMCIzlH-Q
   date: 2018-09-05 00:00:00
   type: Releases
-  duration: 3:58
+  duration: "3:58"
 
 - release: abyss
   artists: Bayza
@@ -474,7 +474,7 @@
   video: Bnqo9sTgrNA
   date: 2018-06-19 00:00:00
   type: Releases
-  duration: 3:55
+  duration: "3:55"
 
 - release: timeline-remix
   artists: Dimatis
@@ -487,7 +487,7 @@
   video: gueXauiEUkM
   date: 2018-06-13 00:00:00
   type: Releases
-  duration: 4:56
+  duration: "4:56"
 
 - release: aether
   artists: Bayza
@@ -500,7 +500,7 @@
   video: ihtWiAPXhYY
   date: 2018-05-24 00:00:00
   type: Releases
-  duration: 4:26
+  duration: "4:26"
 
 - release: endurance
   artists: Bayza
@@ -513,7 +513,7 @@
   video: ZzcCuoYjC6Q
   date: 2018-05-16 00:00:00
   type: Releases
-  duration: 4:56
+  duration: "4:56"
 
 - release: convergence
   artists: Bayza
@@ -526,7 +526,7 @@
   video: QYLnqujS8Uk
   date: 2018-04-23 00:00:00
   type: Releases
-  duration: 4:30
+  duration: "4:30"
 
 - release: unchained
   artists: Bayza
@@ -539,7 +539,7 @@
   video: 89-GLf29wiw
   date: 2018-03-13 00:00:00
   type: Releases
-  duration: 4:30
+  duration: "4:30"
 
 - release: exaltation
   artists: Bayza
@@ -552,7 +552,7 @@
   video: yV5G9v3DooE
   date: 2020-03-20 00:00:00
   type: Releases
-  duration: 4:21
+  duration: "4:21"
 
 - release: desires
   artists: Bayza
@@ -565,7 +565,7 @@
   video: 9y9Ja8OCfe4
   date: 2020-03-27 00:00:00
   type: Releases
-  duration: 3:17
+  duration: "3:17"
 
 - release: not-my-baby
   artists: INNA
@@ -579,7 +579,7 @@
   date: 2020-04-22 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 3:23
+  duration: "3:23"
 
 - release: desert-rose-enta-omri
   artists: Noel Kharman
@@ -593,4 +593,4 @@
   date: 2020-05-02 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
-  duration: 4:29
+  duration: "4:29
