--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -594,3 +594,4 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "4:29"
+  fanlink: https://soundcloud.com/bayza-bootlegs/desert-rose-enta-omri-mashup-bayza-remix
