--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -2,7 +2,7 @@
   artists: Bayza & Dimatis
   title: Serenity
   cover: serenity
-  genre: Deep House
+  genre: Chill Trap
   year: 2020
   description: A track in collaboration with Dimatis
   label: 
