--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -4,7 +4,7 @@
   cover: serenity
   genre: Chill Trap
   year: 2020
-  description: A track in collaboration with Dimatis
+  description: Fusion of styles in collaboration with my brother <a class="tag text-white" target="_blank" href="https://dimatis.yizack.com">Dimatis</a>.
   label: 
   video: OMfdAwpKIsc
   date: 2020-01-24 00:00:00
