--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -624,3 +624,17 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "4:29"
+
+- release: everythingiwanted
+  artists: Bayza
+  title: Everything I Wanted
+  cover: everythingiwanted
+  genre: Deep House
+  year: 2020
+  description: This is my cover version of Billie Eilish's hit. Released under One Seven Music in conjunction with FRQNCY.
+  label: One Seven Music / FRQNCY
+  video: zNWDP7knB7o
+  date: 2020-06-05 00:00:00
+  type: Releases
+  duration: "4:12"
+  fanlink: 
