--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -631,7 +631,7 @@
   cover: everythingiwanted
   genre: Deep House
   year: 2020
-  description: This is my cover version of Billie Eilish's hit. Released under One Seven Music in conjunction with FRQNCY.
+  description: "This is my cover version of Billie Eilish's hit. Vocals by: Anna Vaverková. Released under One Seven Music in conjunction with FRQNCY."
   label: One Seven Music / FRQNCY
   video: zNWDP7knB7o
   date: 2020-06-05 00:00:00
