--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -633,7 +633,7 @@
   year: 2020
   description: "This is an official cover version of the Billie Eilish's hit. Vocals by: Anna Vaverková. Released under One Seven Music in conjunction with FRQNCY."
   label: One Seven Music / FRQNCY
-  video: zNWDP7knB7o
+  video: IX2VJo9E_Sw
   date: 2020-06-05 00:00:00
   type: Releases
   duration: "4:12"
