--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -638,3 +638,17 @@
   type: Releases
   duration: "4:12"
   fanlink: bayza.ml/everything-i-wanted
+
+- release: alone
+  artists: DJ SK & Bayza
+  title: Alone
+  cover: alone
+  genre: Deep House
+  year: 2020
+  description: 
+  label: DeepShine Records
+  video: 
+  date: 2020-06-24 00:00:00
+  type: Upcoming
+  duration: "4:24"
+  fanlink: 
