--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -649,6 +649,6 @@
   label: DeepShine Records
   video: 
   date: 2020-06-24 00:00:00
-  type: Releases
+  type: Upcoming
   duration: "4:24"
   fanlink: 
