--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -638,3 +638,17 @@
   type: Releases
   duration: "4:12"
   fanlink: bayza.ml/everything-i-wanted
+
+- release: alone
+  artists: DJ SK & Bayza
+  title: Alone
+  cover: alone
+  genre: Deep House
+  year: 2020
+  description: My fourth release under DeepShine Records. This time in collaboration with Moroccan producer 'DJ SK'.
+  label: DeepShine Records
+  video: FKTMZBDzgD8
+  date: 2020-06-24 00:00:00
+  type: Releases
+  duration: "4:24"
+  fanlink: fanlink.to/MDS162
