--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -645,7 +645,7 @@
   cover: alone
   genre: Deep House
   year: 2020
-  description: My fourth release under DeepShine Records. This time in collaboration with Moroccan producer 'DJ SK'.
+  description: My fourth release under DeepShine Records. This time in collaboration with Moroccan producer <a class="tag text-white" target="_blank" href="https://www.instagram.com/djskofficial1/">DJ SK</a>.
   label: DeepShine Records
   video: FKTMZBDzgD8
   date: 2020-06-24 00:00:00
