--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -4,7 +4,7 @@
   cover: serenity
   genre: Chill Trap
   year: 2020
-  description: Fusion of styles in collaboration with my brother <a class="tag text-white" target="_blank" href="https://dimatis.yizack.com">Dimatis</a>.
+  description: Fusion of styles in collaboration with my brother Dimatis.
   label: 
   video: OMfdAwpKIsc
   date: 2020-01-24 00:00:00
@@ -645,7 +645,7 @@
   cover: alone
   genre: Deep House
   year: 2020
-  description: My fourth release under DeepShine Records. This time in collaboration with Moroccan producer <a class="tag text-white" target="_blank" href="https://www.instagram.com/djskofficial1/">DJ SK</a>.
+  description: My fourth release under DeepShine Records. This time in collaboration with Moroccan producer DJ SK.
   label: DeepShine Records
   video: FKTMZBDzgD8
   date: 2020-06-24 00:00:00
