--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -652,3 +652,17 @@
   type: Releases
   duration: "4:24"
   fanlink: bayza.ml/alone
+
+- release: miracle
+  artists: Bayza
+  title: Miracle
+  cover: miracle
+  genre: Deep House
+  year: 2020
+  description: A Miracle is an effect or extraordinary event not explicable by natural, scientific law. It also characterizes any beneficial event that is statistically improbable, and some coincidences can bee seen as miracles.
+  label: 
+  video: -vx3oZ4j4h0
+  date: 2020-07-10 00:00:00
+  type: Releases
+  duration: "3:12"
+  fanlink: bayza.ml/miracle
