--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -666,3 +666,17 @@
   type: Releases
   duration: "3:12"
   fanlink: bayza.ml/miracle
+
+- release: make-believe
+  artists: Eress
+  title: Make Believe (Bayza Remix)
+  cover: make-believe-remix
+  genre: Deep House
+  year: 2020
+  description: I was participating in a remix competition for "Eress - Make Believe" and I won the first place. :)
+  label: 
+  video: MjaLp6MNm4g
+  date: 2020-08-01 00:00:00
+  type: Releases
+  duration: "4:28"
+  fanlink: bayza.ml/make-believe
