--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -680,3 +680,17 @@
   type: Releases
   duration: "4:28"
   fanlink: bayza.ml/make-believe
+
+- release: solace
+  artists: Bayza
+  title: Solace
+  cover: solace
+  genre: Deep House
+  year: 2020
+  description: Bayza is back on PalmTherapySounds with his track "Solace".
+  label: PalmTherapySounds
+  video: NKj7KnpvJwU
+  date: 2020-08-28 00:00:00
+  type: Releases
+  duration: "3:52"
+  fanlink: backl.ink/142779682
