--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -689,7 +689,7 @@
   year: 2020
   description: Bayza is back on PalmTherapySounds with his track "Solace".
   label: PalmTherapySounds
-  video: NKj7KnpvJwU
+  video: oYqe05-Aha0
   date: 2020-08-28 00:00:00
   type: Releases
   duration: "3:52"
