--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -694,3 +694,18 @@
   type: Releases
   duration: "3:52"
   fanlink: backl.ink/142779682
+
+- release: fire-drill
+  artists: Melanie Martinez
+  title: Fire Drill (Bayza Bootleg)
+  cover: fire-drill
+  genre: Deep House
+  year: 2020
+  description: There was some people of Melanie Martinez's community that came to my 'Strawberry Shortcake' Remix and they gave positive comments and wanted me to make more of Melanie. I present this time a remix for 'Fire Drill' 🔥  Hope you like it 😊🧡🔥 🔥.
+  label: 
+  video: kYNUcObW_H0
+  date: 2020-09-19 00:00:00
+  type: Bootlegs/Remixes
+  link: -bootlegs
+  duration: "4:25"
+  fanlink: bayza.ml/fire-drill
