--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -709,3 +709,17 @@
   link: -bootlegs
   duration: "4:25"
   fanlink: bayza.ml/fire-drill
+
+- release: hold-on-to-me
+  artists: Dimatis & Bayza
+  title: Hold On To Me
+  cover: hold-on-to-me
+  genre: Future Bass
+  year: 2020
+  description: This track is different from my usual style because it is a collaboration with my twin brother Dimatis, he is a Melodic Dubstep producer. We don't collaborate so often, but when we do, we create styles that are different from both of us. This time we try some Future Bass with vocals. Hope you like it!
+  label: 
+  video: 
+  date: 2020-09-25 00:00:00
+  type: Releases
+  duration: "3:27"
+  fanlink: bayza.ml/hold-on
