--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -718,7 +718,7 @@
   year: 2020
   description: This track is different from my usual style because it is a collaboration with my twin brother Dimatis, he is a Melodic Dubstep producer. We don't collaborate so often, but when we do, we create styles that are different from both of us. This time we try some Future Bass with vocals. Hope you like it!
   label: 
-  video: 
+  video: N2sZKeX_xGI
   date: 2020-09-25 00:00:00
   type: Releases
   duration: "3:27"
