--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -693,7 +693,7 @@
   date: 2020-08-28 00:00:00
   type: Releases
   duration: "3:52"
-  fanlink: backl.ink/142779682
+  fanlink: bayza.ml/solace
 
 - release: fire-drill
   artists: Melanie Martinez
