--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -723,3 +723,17 @@
   type: Releases
   duration: "3:27"
   fanlink: bayza.ml/hold-on
+
+- release: no-guarantee
+  artists: Bayza
+  title: No Guarantee
+  cover: no-guarantee
+  genre: Deep House
+  year: 2020
+  description: There is just no guarantee, for you and me...
+  label: DeepShine Records
+  video: ggLypCHsfzw
+  date: 2020-10-19 00:00:00
+  type: Releases
+  duration: "3:38"
+  fanlink: bayza.ml/no-guarantee
