--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -732,7 +732,7 @@
   year: 2020
   description: There is just no guarantee, for you and me...
   label: DeepShine Records
-  video: ggLypCHsfzw
+  video: YPLPc6xGWK4
   date: 2020-10-19 00:00:00
   type: Releases
   duration: "3:38"
