--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -737,3 +737,17 @@
   type: Releases
   duration: "3:38"
   fanlink: bayza.ml/no-guarantee
+
+- release: reborn
+  artists: Bayza & Dimatis
+  title: Reborn
+  cover: Reborn
+  genre: Trap
+  year: 2020
+  description: We made this track for a gaming community here in Panama. It's like a Trap style, hope you enjoy!.
+  label:
+  video: YPLPc6xGWK4
+  date: 2020-10-22 00:00:00
+  type: Releases
+  duration: "2:42"
+  fanlink: bayza.ml/reborn
