--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -741,12 +741,12 @@
 - release: reborn
   artists: Bayza & Dimatis
   title: Reborn
-  cover: Reborn
+  cover: reborn
   genre: Trap
   year: 2020
   description: We made this track for a gaming community here in Panama. It's like a Trap style, hope you enjoy!.
   label:
-  video: YPLPc6xGWK4
+  video: Uqm00tl0nKQ
   date: 2020-10-22 00:00:00
   type: Releases
   duration: "2:42"
