--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -751,3 +751,17 @@
   type: Releases
   duration: "2:42"
   fanlink: bayza.ml/reborn
+
+- release: lamentos
+  artists: Bayza
+  title: Lamentos
+  cover: lamentos
+  genre: Deep House
+  year: 2020
+  description: I had the idea to create a dark, mysterious, and somewhat scary Halloween-themed track for October 31. And here it is, hope you like it!
+  label:
+  video: nQ0A1WWxuFY
+  date: 2020-10-31 00:00:00
+  type: Releases
+  duration: "3:36"
+  fanlink: bayza.ml/lamentos
