--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -765,3 +765,19 @@
   type: Releases
   duration: "3:36"
   fanlink: bayza.ml/lamentos
+
+
+- release: lo-vas-a-olvidar
+  artists: Billie Eilish, Rosalía
+  title: Lo Vas A Olvidar (Bayza Bootleg)
+  cover: lo-vas-a-olvidar
+  genre: Deep House
+  year: 2021
+  description: I loved Billie Eilish and ROSALÍA collaboration. I was amazed to hear Billie singing in my language (spanish). Since first time listening to it I felt that I had to remix it with my deep vibe.
+  label: 
+  video: RilJRFTno6M
+  date: 2021-01-22 00:00:00
+  type: Bootlegs/Remixes
+  link: -bootlegs
+  duration: "3:28"
+  fanlink: bayza.ml/LVAO
