--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -768,7 +768,7 @@
 
 
 - release: lo-vas-a-olvidar
-  artists: Billie Eilish, Rosalía
+  artists: Billie Eilish, ROSALÍA
   title: Lo Vas A Olvidar (Bayza Bootleg)
   cover: lo-vas-a-olvidar
   genre: Deep House
