--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -769,7 +769,7 @@
 
 - release: lo-vas-a-olvidar
   artists: Billie Eilish, ROSALÍA
-  title: Lo Vas A Olvidar (Bayza Bootleg)
+  title: Lo Vas A Olvidar (Bayza Remix)
   cover: lo-vas-a-olvidar
   genre: Deep House
   year: 2021
