--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -781,3 +781,17 @@
   link: -bootlegs
   duration: "3:28"
   fanlink: bayza.ml/LVAO
+
+- release: looking-at-you
+  artists: Bayza
+  title: Looking At You
+  cover: looking-at-you
+  genre: Deep House / Slap House
+  year: 2021
+  description: Starting 2021 with some deep and slappy stuff!
+  label:
+  video: Yd5LZuOyCpg
+  date: 2021-02-12 00:00:00
+  type: Releases
+  duration: "3:18"
+  fanlink: bayza.ml/LookingAtYou
