--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -794,4 +794,4 @@
   date: 2021-02-12 00:00:00
   type: Releases
   duration: "3:18"
-  fanlink: lnk.bayza.ml/LookingAtYou
+  fanlink: bayza.ml/LookingAtYou
