--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -331,6 +331,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:15"
+  fanlink: lnk.bayza.ml/strawberry-shortcake
 
 - release: everything-i-wanted
   artists: Billie Eilish
