--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -317,6 +317,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:55"
+  fanlink: lnk.bayza.ml/still-learning
 
 - release: strawberry-shortcake
   artists: Melanie Martinez
