--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -626,6 +626,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "4:29"
+  fanlink: lnk.bayza.ml/desert-rose
 
 - release: everythingiwanted
   artists: Bayza
