--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -612,6 +612,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:23"
+  fanlink: lnk.bayza.ml/not-my-baby
 
 - release: desert-rose-enta-omri
   artists: Noel Kharman
