--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -799,3 +799,18 @@
   type: Releases
   duration: "3:18"
   fanlink: lnk.bayza.ml/LookingAtYou
+
+- release: my-head-my-heart
+  artists: Ava Max
+  title: My Head & My Heart (Bayza Remix)
+  cover: my-head-my-heart
+  genre: Deep House
+  year: 2021
+  description: Ava Max - My Head & My Heart (Bayza Remix)
+  label: 
+  video: eKGxQxm9FUA
+  date: 2021-02-16 00:00:00
+  type: Bootlegs/Remixes
+  link: -bootlegs
+  duration: "3:33"
+  fanlink: lnk.bayza.ml/my-head-my-heart
