--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -814,3 +814,17 @@
   link: -bootlegs
   duration: "3:33"
   fanlink: lnk.bayza.ml/my-head-my-heart
+
+- release: without-you
+  artists: Bayza
+  title: Without You
+  cover: without-you
+  genre: Deep House
+  year: 2021
+  description: Releasing some chill deep house with DeepShine Records!
+  label:
+  video: Ncxok5G7yOA
+  date: 2021-03-08 00:00:00
+  type: Releases
+  duration: "2:47"
+  fanlink: lnk.bayza.ml/without-you
