--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -828,3 +828,17 @@
   type: Releases
   duration: "2:47"
   fanlink: lnk.bayza.ml/without-you
+
+- release: you-said-goodbye
+  artists: Bayza
+  title: You Said Goodbye
+  cover: you-said-goodbye
+  genre: Deep House
+  year: 2021
+  description: This time I worked with a Romanian singer named "Giulia Mihai". She wrote the lyrics and provided her voice for this song.
+  label: DeepShine Records
+  video: Ncxok5G7yOA
+  date: 2021-03-31 00:00:00
+  type: Releases
+  duration: "3:19"
+  fanlink: lnk.bayza.ml/YouSaidGoodbye
