--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -837,7 +837,7 @@
   year: 2021
   description: This time I worked with a Romanian singer named "Giulia Mihai". She wrote the lyrics and provided her voice for this song. The song is kinda sad/melancholic with lyrics in English and Spanish.
   label: DeepShine Records
-  video: Ncxok5G7yOA
+  video: 5Pt9qzAqVxA
   date: 2021-03-31 00:00:00
   type: Releases
   duration: "3:19"
