--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -830,7 +830,7 @@
   fanlink: lnk.bayza.ml/without-you
 
 - release: you-said-goodbye
-  artists: Bayza
+  artists: Bayza feat. Giulia Mihai
   title: You Said Goodbye
   cover: you-said-goodbye
   genre: Deep House
