--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -835,7 +835,7 @@
   cover: you-said-goodbye
   genre: Deep House
   year: 2021
-  description: This time I worked with a Romanian singer named "Giulia Mihai". She wrote the lyrics and provided her voice for this song. The song is kinda sad/melancholic with lyrics in English and Spanish.
+  description: This time I worked with a Romanian singer named "Giulia Mihai". She wrote the lyrics and provided her voice for this song. The song is kinda sad/melancholic with lyrics in English and Spanish language.
   label: DeepShine Records
   video: 5Pt9qzAqVxA
   date: 2021-03-31 00:00:00
