--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -842,3 +842,17 @@
   type: Releases
   duration: "3:19"
   fanlink: lnk.bayza.ml/YouSaidGoodbye
+
+- release: feel-so-lonely
+  artists: Bayza
+  title: Feel So Lonely
+  cover: feel-so-lonely
+  genre: Slap House / Deep House
+  year: 2021
+  description:
+  label: FRQNCY
+  video: q-UK_m9rq3Q
+  date: 2021-04-16 00:00:00
+  type: Releases
+  duration: "2:48"
+  fanlink: lnk.bayza.ml/FeelSoLonely
