--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -849,7 +849,7 @@
   cover: feel-so-lonely
   genre: Slap House / Deep House
   year: 2021
-  description:
+  description: Fresh dance/house tune "Feel So Lonely" is OUT!
   label: FRQNCY
   video: q-UK_m9rq3Q
   date: 2021-04-16 00:00:00
