--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -856,3 +856,17 @@
   type: Releases
   duration: "2:48"
   fanlink: lnk.bayza.ml/FeelSoLonely
+
+- release: feels
+  artists: DeejaVu X Bayza
+  title: Feels
+  cover: feels
+  genre: Deep House / Chill House
+  year: 2021
+  description: Fresh chill house track in collaboration with Finnish producer "DeejaVu"
+  label: 
+  video: hWhQJKLyyss
+  date: 2021-04-23 00:00:00
+  type: Releases
+  duration: "2:46"
+  fanlink: lnk.bayza.ml/Feels
