--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -870,3 +870,17 @@
   type: Releases
   duration: "2:46"
   fanlink: lnk.bayza.ml/Feels
+
+- release: take-me-home
+  artists: Bayza
+  title: Take Me Home
+  cover: take-me-home
+  genre: Deep House
+  year: 2021
+  description: 
+  label: The Night Drive
+  video: BwKO7sfFVAA
+  date: 2021-06-25 00:00:00
+  type: Releases
+  duration: "2:58"
+  fanlink: lnk.bayza.ml/TakeMeHome
