--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -877,7 +877,7 @@
   cover: take-me-home
   genre: Deep House
   year: 2021
-  description: 
+  description: Bayza brings "Take Me Home" under the German label "The Night Drive". The inspiration for this track was to try to transmit nighty vibes that are suited perfectly for car driving or club parties because of its modern house music style.
   label: The Night Drive
   video: BwKO7sfFVAA
   date: 2021-06-25 00:00:00
