--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -884,3 +884,18 @@
   type: Releases
   duration: "2:58"
   fanlink: lnk.bayza.ml/TakeMeHome
+
+- release: thumbs
+  artists: Sabrina Carpenter
+  title: Thumbs (Bayza Remix)
+  cover: thumbs
+  genre: Dance
+  year: 2021
+  description: Sabrina Carpenter - Thumbs (Bayza Remix)
+  label: 
+  video: SPlamGgkl00
+  date: 2021-12-02 00:00:00
+  type: Bootlegs/Remixes
+  link: -bootlegs
+  duration: "3:23"
+  fanlink: lnk.bayza.ml/thumbs
