--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -891,7 +891,7 @@
   cover: thumbs
   genre: Dance
   year: 2021
-  description: Hi guys, I hope you like this track, someone asked me to remix Thumbs by Sabrina Carpenter, I liked the original song when I first listened to it so I decided to finish this remix. I've also uploaded an instrumental version for those who want to listen without the vocals.
+  description: Hi guys, I hope you like this track, someone asked me to remix Thumbs by Sabrina Carpenter, I liked the original song when I first listened to it so I decided to finish this remix. I've also uploaded an Instrumental Version for those who want to listen without the vocals.
   label: 
   video: SPlamGgkl00
   date: 2021-12-02 00:00:00
