--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -849,7 +849,7 @@
   cover: feels
   genre: Deep House / Chill House
   year: 2021
-  description: Fresh chill house track in collaboration with Finnish producer "DeejaVu"
+  description: Fresh chill house track in collaboration with Finnish producer "DeejaVu".
   label: 
   video: hWhQJKLyyss
   date: 2021-04-23 00:00:00
@@ -877,7 +877,7 @@
   cover: thumbs
   genre: Dance
   year: 2021
-  description: Hi guys, I hope you like this track, someone asked me to remix Thumbs by Sabrina Carpenter, I liked the original song when I first listened to it so I decided to finish this remix. I've also uploaded an Instrumental Version for those who want to listen without the vocals.
+  description: Hi guys, I hope you like this track, someone asked me to remix Thumbs by Sabrina Carpenter, I liked the original song when I first listened to it so I decided to finish this remix. I've also uploaded an <a class="text-white" href="https://www.youtube.com/watch?v=9u_UwD-WpSE" target="_blank" title="Bayza - Thumbs | Instrumental Version">Instrumental Version</a></b> for those who want to listen without the vocals.
   label: 
   video: SPlamGgkl00
   date: 2021-12-02 00:00:00
