--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -885,3 +885,17 @@
   link: -bootlegs
   duration: "3:23"
   fanlink: lnk.bayza.ml/thumbs
+
+- release: pirhan
+  artists: DJ Phellix, Bayza, Sheenubb ft. Sant
+  title: Pirhan
+  cover: pirhan
+  genre: Organic House
+  year: 2021
+  description: 
+  label: Ario Records
+  video: _HNN88li9kI
+  date: 2021-12-15 00:00:00
+  type: Releases
+  duration: "4:55"
+  fanlink: lnk.bayza.ml/Pirhan
