--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -890,7 +890,7 @@
   artists: DJ Phellix, Bayza, Sheenubb ft. Sant
   title: Pirhan
   cover: pirhan
-  genre: Organic House
+  genre: Organic House / Deep House
   year: 2021
   description: 
   label: Ario Records
