--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -712,7 +712,7 @@
   date: 2020-09-25 00:00:00
   type: Releases
   duration: "3:27"
-  fanlink: lnk.bayza.ml/hold-on
+  fanlink: lnk.bayza.ml/hold-on-to-me
 
 - release: no-guarantee
   artists: Bayza
