--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -899,3 +899,17 @@
   type: Releases
   duration: "4:55"
   fanlink: lnk.bayza.ml/Pirhan
+
+- release: Passages
+  artists: Bayza
+  title: Passages
+  cover: passages
+  genre: Deep House
+  year: 2021
+  description: To end the year, I decided to release an original track within an EP that also includes instrumentals of some of my previous bootlegs.
+  label: 
+  video: gqnAPRtTnSs
+  date: 2021-12-30 00:00:06
+  type: Releases
+  duration: "3:00"
+  fanlink: lnk.bayza.ml/Passages
