--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -900,7 +900,7 @@
   duration: "4:55"
   fanlink: lnk.bayza.ml/Pirhan
 
-- release: Passages
+- release: passages
   artists: Bayza
   title: Passages
   cover: passages
