--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -922,7 +922,7 @@
   album: Passages
   genre: Deep House
   year: 2021
-  description: This is the instrumental version of "Sabrina Carpenter - Thumbs (Bayza Bootleg)"
+  description: This is the instrumental version of "<a class="text-white" href="https://bayzamusic.com/releases/2021/thumbs" target="_blank" title="Sabrina Carpenter - Thumbs (Bayza Bootleg)">Sabrina Carpenter - Thumbs (Bayza Bootleg)</a>"
   label: 
   video: 9u_UwD-WpSE
   date: 2021-12-30 00:00:05
