--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -900,6 +900,21 @@
   duration: "4:55"
   fanlink: lnk.bayza.ml/Pirhan
 
+- release: myheadmyheart
+  artists: Bayza
+  title: My Head & My Heart - Instrumental
+  cover: passages
+  album: Passages
+  genre: Deep House
+  year: 2021
+  description: This is the instrumental version of "<a class="text-white" href="https://bayzamusic.com/releases/2021-bootlegs/my-head-my-heart" target="_blank" title="Ava Max - My Head & My Heart (Bayza Bootleg)">Ava Max - My Head & My Heart (Bayza Bootleg)</a>"
+  label: 
+  video: JaN96BTWzZo
+  date: 2021-12-30 00:00:03
+  type: Releases
+  duration: "3:31"
+  fanlink: lnk.bayza.ml/MyHeadMyHeart
+
 - release: lovasaolvidar
   artists: Bayza
   title: Lo Vas A Olvidar - Instrumental
