--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -900,6 +900,21 @@
   duration: "4:55"
   fanlink: lnk.bayza.ml/Pirhan
 
+- release: notmybaby
+  artists: Bayza
+  title: Not My Baby - Instrumental
+  cover: passages
+  album: Passages
+  genre: Deep House
+  year: 2021
+  description: This is the instrumental version of "<a class="text-white" href="https://bayzamusic.com/releases/2020-bootlegs/not-my-baby" target="_blank" title="INNA - Not My Baby (Bayza Bootleg)">INNA - Not My Baby (Bayza Bootleg)</a>"
+  label: 
+  video: KIP1Wa8lEsk
+  date: 2021-12-30 00:00:02
+  type: Releases
+  duration: "3:19"
+  fanlink: lnk.bayza.ml/NotMyBaby
+
 - release: myheadmyheart
   artists: Bayza
   title: My Head & My Heart - Instrumental
