--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -900,6 +900,21 @@
   duration: "4:55"
   fanlink: lnk.bayza.ml/Pirhan
 
+- release: desert-rose
+  artists: Bayza
+  title: Desert Rose - Instrumental
+  cover: passages
+  album: Passages
+  genre: Deep House
+  year: 2021
+  description: This is the instrumental version of "<a class="text-white" href="https://bayzamusic.com/releases/2020-bootlegs/desert-rose-enta-omri" target="_blank" title="Noel Kharman - Desert Rose / انت عمري Mashup (Bayza Remix)">Noel Kharman - Desert Rose / انت عمري Mashup (Bayza Remix)</a>"
+  label: 
+  video: h1aLkuT0ctI
+  date: 2021-12-30 00:00:01
+  type: Releases
+  duration: "3:49"
+  fanlink: lnk.bayza.ml/DesertRose
+
 - release: notmybaby
   artists: Bayza
   title: Not My Baby - Instrumental
