--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -989,3 +989,18 @@
   type: Releases
   duration: "3:00"
   fanlink: lnk.bayza.ml/Passages
+
+- release: im-falling
+  artists: Bayza
+  title: I'm Falling
+  cover: im-falling
+  album: 
+  genre: Deep House
+  year: 2022
+  description: 
+  label: DeepShine Records
+  video: EZodqty3HLA
+  date: 2022-01-21 00:00:00
+  type: Releases
+  duration: "3:32"
+  fanlink: lnk.bayza.ml/ImFalling
