--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1004,3 +1004,18 @@
   type: Releases
   duration: "3:32"
   fanlink: lnk.bayza.ml/ImFalling
+
+- release: call-out_instrumental
+  artists: Dimatis, Bayza
+  title: Call Out
+  cover: callout
+  album: 
+  genre: Electropop
+  year: 2022
+  description: 
+  label: 
+  video: Jg-W6hRAAxM
+  date: 2022-02-25 00:00:00
+  type: Releases
+  duration: "3:40"
+  fanlink: lnk.bayza.ml/CallOut_Instrumental
