--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1008,7 +1008,7 @@
 - release: call-out_instrumental
   artists: Dimatis, Bayza
   title: Call Out
-  cover: callout
+  cover: call-out
   album: 
   genre: Electropop
   year: 2022
