--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1019,3 +1019,18 @@
   type: Releases
   duration: "3:40"
   fanlink: lnk.bayza.ml/CallOut_Instrumental
+
+- release: call-out
+  artists: Dimatis, Bayza
+  title: Call Out
+  cover: call-out
+  album: 
+  genre: Electropop
+  year: 2022
+  description: 
+  label: 
+  video: vlU7crlYW4I
+  date: 2022-02-25 00:00:00
+  type: Releases
+  duration: "3:40"
+  fanlink: lnk.bayza.ml/CallOut_Instrumental
