--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1030,7 +1030,7 @@
   description: 
   label: 
   video: vlU7crlYW4I
-  date: 2022-02-25 00:00:00
+  date: 2022-02-25 00:00:01
   type: Releases
   duration: "3:40"
-  fanlink: lnk.bayza.ml/CallOut_Instrumental
+  fanlink: lnk.bayza.ml/CallOut
