--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1007,7 +1007,7 @@
 
 - release: call-out_instrumental
   artists: Dimatis, Bayza
-  title: Call Out
+  title: Call Out (Instrumental)
   cover: call-out
   album: 
   genre: Electropop
