--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1019,3 +1019,18 @@
   type: Releases
   duration: "3:40"
   fanlink: lnk.bayza.ml/CallOut
+
+- release: pieces
+  artists: Bayza
+  title: Pieces
+  cover: pieces
+  album: 
+  genre: Dance
+  year: 2022
+  description: 
+  label: 
+  video: VTscrLkd20s
+  date: 2022-05-06 00:00:00
+  type: Releases
+  duration: "3:03"
+  fanlink: lnk.bayza.ml/Pieces
