--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1034,3 +1034,18 @@
   type: Releases
   duration: "3:03"
   fanlink: lnk.bayza.ml/Pieces
+
+- release: show-me
+  artists: dbeet, Bayza
+  title: Show Me What You Feel
+  cover: show-me-what-you-feel
+  album: 
+  genre: Dance
+  year: 2022
+  description: 
+  label: Melodicity Records
+  video: trdqaqZCVEU
+  date: 2022-06-10 00:00:00
+  type: Releases
+  duration: "2:44"
+  fanlink: lnk.bayza.ml/ShowMe
